based on patch from Thomas Monjalon <thomas@monjalon.net>

Fix discarded content if no Content-Type
When replying to an email without any content type header,
the content was ignored (i.e. not quoted in the reply).

BUG: 426238